# video2midi

./: .v2m.ini  Not Evil - The LEGO Movie 2 - The Second Part _ Piano Tutorial (Synthesia)-9mv_hKwCzUo.mkv_output.mid  README.md  py.py  pyproject.toml  requirements.txt  v2m.py
.github/: FUNDING.yml
midis/: 19 Years (SAD PIANO SONG)-Ddt2Zv8_Ki4.webm_output.mid  200,000 SUBSCRIBERS 200,000 NOTES-kF6QApn4SVY.mkv_0_output.mid  25,000 SUBSCRIBERS 25,000 NOTES (Playable Version) - Piano Tutorial-p3HPS1iZ1rA.webm_output.mid  5 Beautiful Themes from DreamWorks Animation _ Piano Tutorial (Synthesia)-mlA2qY0hokU.mkv_output.mid  5 Beautiful Themes from DreamWorks Animation _ Piano Tutorial (Synthesia)t.mid  ABBA - Gimme! Gimme! Gimme! (A Man After Midnight) - Piano Tutorial-KsIkZ5-6wws.webm_0_output.mid  ALAN WALKER - ALL FALLS DOWN - Piano Tutorial-Q5JYhTsxkk4.webm_1_output.mid  ALAN WALKER - DARKSIDE - Piano Tutorial-2uotLLk9iac.webm_output.mid  AXEL F - Piano Tutorial-YIvGxvZBR80.webm_8_output.mid  AXEL F - Piano Tutorial-YIvGxvZBR80.webm_output.mid  All Star, but it's so DARK and DRAMATIC, I bet 1.000.000$ You Will CRY!-AyB-TKmloQU.webm_0_output.mid  Avengers - Endgame Official Trailer #2 Music -  Piano Tutorial (Synthesia)-calBA2-nWks.webm_output.mid  Axel F (Harold Faltermeyer)-lPaYPtnPy8Y.mp4_output.mid  BAD APPLE!! - Piano Tutorial-tW3oXdl1E64.mkv_output.mid  Baby Shark Dance - EASY Piano Tutorial - PINKFONG-I40J13vEqzs.mp4_output.mid  CONCERNING HOBBITS from THE LORD OF THE RINGS - Piano Tutorial-SiVpMY4wFTw.webm_1_output.mid  (+35 more)
tests/: spin.mp4.ini  test_settings.py
(+12 files in other folders)
